--- a/Patient Transport Migration/Web.config
+++ b/Patient Transport Migration/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="MSSQLDB" connectionString="Server=.\SQLEXPRESS;Database=Migration;Integrated Security=true" providerName="System.Data.SqlClient"/>
+    <add name="MSSQLDB_V2" connectionString="Server=.\SQLEXPRESS;Database=Mig2;Integrated Security=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
