--- a/Patient Transport Migration/Patient Transport Migration.csproj
+++ b/Patient Transport Migration/Patient Transport Migration.csproj
@@ -100,10 +100,12 @@
     <Content Include="Content\Css\bootstrap.css" />
     <Content Include="Content\Css\bootstrap.min.css" />
     <Content Include="Content\Css\Site.css" />
+    <Content Include="Content\Images\ajax-loader.gif" />
+    <Content Include="Content\Images\cat_waiting.gif" />
     <Content Include="Content\Images\favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="TODO.txt" />
+    <None Include="TODO.md" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -156,11 +158,11 @@
     <Content Include="Views\Home\_PatientInfoPatientDetails.cshtml" />
     <Content Include="Views\Home\_DokterStatusEditDokter.cshtml" />
     <Content Include="Views\Home\_PatientInfoAanvraagTypes.cshtml" />
-    <Content Include="Views\Home\_Request.cshtml" />
     <Content Include="Views\Home\VerplegingOverzicht.cshtml" />
-    <Content Include="Views\Home\_PatientenInOrde.cshtml" />
-    <Content Include="Views\Home\_PatientenToDo.cshtml" />
+    <Content Include="Views\Home\_VerplegingOverzichtPatientenInOrde.cshtml" />
+    <Content Include="Views\Home\_VerplegingOverzichtPatientenWachtend.cshtml" />
     <Content Include="Views\Home\_PatientInfoPatientMedischeAanvragen.cshtml" />
+    <Content Include="Views\Home\_PatientInfoAanvraagDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
