Packages renamed, separated & added
POCO's nu onder package POCO
DAL bevat nu de db context
Repository toegevoegd voor DBSet repository queries
Mobiele pagina verbeterd, moet alleen nog javascript afwerken.

--- a/Patient Transport Migration/Patient Transport Migration.csproj
+++ b/Patient Transport Migration/Patient Transport Migration.csproj
@@ -138,21 +138,23 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Core\BehandelTaak.cs" />
     <Compile Include="Models\Core\TransportActie.cs" />
-    <Compile Include="Models\DAL\Aanvraag.cs" />
-    <Compile Include="Models\DAL\AanvraagType.cs" />
-    <Compile Include="Models\DAL\Dokter.cs" />
-    <Compile Include="Models\DAL\DokterContext.cs" />
-    <Compile Include="Models\DAL\ExceptionLogger.cs" />
-    <Compile Include="Models\DAL\Locatie.cs" />
-    <Compile Include="Models\DAL\Patient.cs" />
-    <Compile Include="Models\DAL\Geslacht.cs" />
-    <Compile Include="Models\DAL\TransportTaak.cs" />
-    <Compile Include="Models\DAL\Transportwijze.cs" />
-    <Compile Include="Models\DAL\TransportWerknemer.cs" />
+    <Compile Include="Models\DAL\Context.cs" />
+    <Compile Include="Models\POCO\Aanvraag.cs" />
+    <Compile Include="Models\POCO\AanvraagType.cs" />
+    <Compile Include="Models\POCO\Dokter.cs" />
+    <Compile Include="Models\POCO\ExceptionLogger.cs" />
+    <Compile Include="Models\POCO\Locatie.cs" />
+    <Compile Include="Models\POCO\Patient.cs" />
+    <Compile Include="Models\POCO\Geslacht.cs" />
+    <Compile Include="Models\POCO\TransportTaak.cs" />
+    <Compile Include="Models\POCO\Transportwijze.cs" />
+    <Compile Include="Models\POCO\TransportWerknemer.cs" />
     <Compile Include="Models\Model\Afdeling.cs" />
     <Compile Include="Models\Model\TransportTaakStatus.cs" />
-    <Compile Include="Models\MSSQLContext.cs" />
     <Compile Include="Models\Repositories\DokterRepository.cs" />
+    <Compile Include="Models\Repositories\LocatieRepository.cs" />
+    <Compile Include="Models\Repositories\PatientRepository.cs" />
+    <Compile Include="Models\Repositories\AanvraagTypeRepository.cs" />
     <Compile Include="Models\Repositories\TransportTaakRepository.cs" />
     <Compile Include="Models\Repositories\TransportWerknemerRepository.cs" />
     <Compile Include="Models\Util\Pager.cs" />
@@ -161,7 +163,7 @@
     <Compile Include="Models\VM\DokterStatus\DokterDetailsVM.cs" />
     <Compile Include="Models\VM\DokterStatus\DokterLijstVM.cs" />
     <Compile Include="Models\VM\MaakVervoerAanvraag\AanvraagTypesVM.cs" />
-    <Compile Include="Models\VM\MaakVervoerAanvraag\MaakAanvraag.cs" />
+    <Compile Include="Models\VM\MaakVervoerAanvraag\MaakAanvraagVM.cs" />
     <Compile Include="Models\VM\PatientInfo\AanvraagDetailsVM.cs" />
     <Compile Include="Models\VM\PatientInfo\AanvraagTypesVM.cs" />
     <Compile Include="Models\VM\PatientInfo\PatientDetailsVM.cs" />
