--- a/Patient Transport Migration/Web.config
+++ b/Patient Transport Migration/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="MSSQLDB_V3" connectionString="Server=.\SQLEXPRESS;Database=Mig3;Integrated Security=true" providerName="System.Data.SqlClient"/>
+    <add name="ADConnectionString" connectionString="LDAP://sav.com/DC=sav,DC=com" />
+    <add name="MSSQLDB_V3" connectionString="Server=.\SQLEXPRESS;Database=Mig3;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,6 +21,18 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" defaultUrl="~/Account/Login" name=".Auth" timeout="2880" />
+    </authentication>
+    <authorization>
+      <!--<deny users="?" />!-->
+    </authorization>
+    <membership defaultProvider="ADMembershipProvider">
+      <providers>
+        <add name="ADMembershipProvider" connectionStringName="ADConnectionString" attributeMapUsername="sAMAccountName" 
+             type="System.Web.Security.ActiveDirectoryMembershipProvider, System.Web, Version=2.0.0.0,Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </providers>
+    </membership>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
