Admin Controllers toegevoegd
POCO Context controllers toegevoegd.

--- a/Patient Transport Migration/Patient Transport Migration.csproj
+++ b/Patient Transport Migration/Patient Transport Migration.csproj
@@ -131,8 +131,19 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AanvraagsController.cs" />
+    <Compile Include="Controllers\AanvraagTypesController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdministratorsController.cs" />
+    <Compile Include="Controllers\DispatchWerknemersController.cs" />
+    <Compile Include="Controllers\DoktersController.cs" />
+    <Compile Include="Controllers\ExceptionLoggersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LocatiesController.cs" />
+    <Compile Include="Controllers\PatientsController.cs" />
+    <Compile Include="Controllers\TransportTaaksController.cs" />
+    <Compile Include="Controllers\TransportWerknemersController.cs" />
+    <Compile Include="Controllers\TransportwijzesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -203,6 +214,61 @@
     <Content Include="Views\Home\TransportMedewerker\TransportMedewerker.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Home\DokterPraktijk\DokterPraktijk.cshtml" />
+    <Content Include="Views\Aanvraags\Create.cshtml" />
+    <Content Include="Views\Aanvraags\Delete.cshtml" />
+    <Content Include="Views\Aanvraags\Details.cshtml" />
+    <Content Include="Views\Aanvraags\Edit.cshtml" />
+    <Content Include="Views\Aanvraags\Index.cshtml" />
+    <Content Include="Views\AanvraagTypes\Create.cshtml" />
+    <Content Include="Views\AanvraagTypes\Delete.cshtml" />
+    <Content Include="Views\AanvraagTypes\Details.cshtml" />
+    <Content Include="Views\AanvraagTypes\Edit.cshtml" />
+    <Content Include="Views\AanvraagTypes\Index.cshtml" />
+    <Content Include="Views\Administrators\Create.cshtml" />
+    <Content Include="Views\Administrators\Delete.cshtml" />
+    <Content Include="Views\Administrators\Details.cshtml" />
+    <Content Include="Views\Administrators\Edit.cshtml" />
+    <Content Include="Views\Administrators\Index.cshtml" />
+    <Content Include="Views\DispatchWerknemers\Create.cshtml" />
+    <Content Include="Views\DispatchWerknemers\Delete.cshtml" />
+    <Content Include="Views\DispatchWerknemers\Details.cshtml" />
+    <Content Include="Views\DispatchWerknemers\Edit.cshtml" />
+    <Content Include="Views\DispatchWerknemers\Index.cshtml" />
+    <Content Include="Views\Dokters\Create.cshtml" />
+    <Content Include="Views\Dokters\Delete.cshtml" />
+    <Content Include="Views\Dokters\Details.cshtml" />
+    <Content Include="Views\Dokters\Edit.cshtml" />
+    <Content Include="Views\Dokters\Index.cshtml" />
+    <Content Include="Views\ExceptionLoggers\Create.cshtml" />
+    <Content Include="Views\ExceptionLoggers\Delete.cshtml" />
+    <Content Include="Views\ExceptionLoggers\Details.cshtml" />
+    <Content Include="Views\ExceptionLoggers\Edit.cshtml" />
+    <Content Include="Views\ExceptionLoggers\Index.cshtml" />
+    <Content Include="Views\Locaties\Create.cshtml" />
+    <Content Include="Views\Locaties\Delete.cshtml" />
+    <Content Include="Views\Locaties\Details.cshtml" />
+    <Content Include="Views\Locaties\Edit.cshtml" />
+    <Content Include="Views\Locaties\Index.cshtml" />
+    <Content Include="Views\Patients\Create.cshtml" />
+    <Content Include="Views\Patients\Delete.cshtml" />
+    <Content Include="Views\Patients\Details.cshtml" />
+    <Content Include="Views\Patients\Edit.cshtml" />
+    <Content Include="Views\Patients\Index.cshtml" />
+    <Content Include="Views\TransportTaaks\Create.cshtml" />
+    <Content Include="Views\TransportTaaks\Delete.cshtml" />
+    <Content Include="Views\TransportTaaks\Details.cshtml" />
+    <Content Include="Views\TransportTaaks\Edit.cshtml" />
+    <Content Include="Views\TransportTaaks\Index.cshtml" />
+    <Content Include="Views\TransportWerknemers\Create.cshtml" />
+    <Content Include="Views\TransportWerknemers\Delete.cshtml" />
+    <Content Include="Views\TransportWerknemers\Details.cshtml" />
+    <Content Include="Views\TransportWerknemers\Edit.cshtml" />
+    <Content Include="Views\TransportWerknemers\Index.cshtml" />
+    <Content Include="Views\Transportwijzes\Create.cshtml" />
+    <Content Include="Views\Transportwijzes\Delete.cshtml" />
+    <Content Include="Views\Transportwijzes\Details.cshtml" />
+    <Content Include="Views\Transportwijzes\Edit.cshtml" />
+    <Content Include="Views\Transportwijzes\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
